Dodano start, reset cegiełek

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <h1>BrickBuster</h1>
-    <h3>Score: <span id="score">0</span> &nbsp; Lives: <span id="lives">3</span>  &nbsp;  &nbsp;  &nbsp;  <em>Controls: arrow keys</em></h3>
+    <h3>Score: <span id="score">0</span> &nbsp; Lives: <span id="lives">3</span>  &nbsp;  &nbsp;  &nbsp;  <em>Controls: arrow keys, Start: space</em></h3>
+    <button id="newGame" style="display:none">Nowa gra</button>
 
     <div class="game-board">
       <div class="ball"></div>
